--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -193,7 +193,7 @@ With altitude, the strength of buffering decreases, moving to open-forests [@zel
 ### Biophysical drivers
 
 **Vertical biophysical drivers reviewed above influence heat and water stress patterns, and leaf temperature $T_{leaf}$ distribution along the vertical gradient, which in turn shapes leaf metabolism (see following section).**
-Along the complex biophysical dynamics, leaves adjust to their environment by maintaining optimum $T_{leaf}$ for carbon assimilation and metabolic processes  [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020]. Therefore, leaves can be cooler than air at high temperature and warmer than air at low temperature (limited homeothermy) or can be drastically warmer than $T_{air}$ (megathermy). In some cases, $T_{leaf}$ can be equalled to $T_{air}$ (poikilothermy) [@cavaleriColdbloodedForestsWarming2020; @drakeNoEvidenceHomeostatic2020]. 
+Along the biophysical dynamics vertically, leaves adjust to their environment by maintaining optimum $T_{leaf}$, for carbon assimilation and metabolic processes  [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020]. Therefore, leaves can be cooler than air at high temperature and warmer than air at low temperature (limited homeothermy) or can be drastically warmer than $T_{air}$ (megathermy). In some cases, $T_{leaf}$ can be equalled to $T_{air}$ (poikilothermy) [@cavaleriColdbloodedForestsWarming2020; @drakeNoEvidenceHomeostatic2020]. 
 
 $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on basic biophysical principles  [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`) where $T_{leaf}$-$T_{air}$ is a function of energy input (through radiation or heat) versus heat lost (such as transpiration) to the environment [Fig. 2; @michaletzPlantThermoregulationEnergetics2015].
 
@@ -226,7 +226,7 @@ Leaf morphology adapts to the local microenvironment during leaf expansion [@zwi
 But at greater tree height, biological--tree-height--and biophysical--light, temperature, and evaporative demand (Fig. `r fig_NEON_vertical`)--also play a role in shaping leaf traits 
 
 In particular, hydraulic constraints increase with height on a tree [REFS; *McDowell-isotopes book chapter*; @cobleLightAcclimationOptimizes2015; *Couvreur et al., 2018*] such that gas exchange is strongly constrained by at the tops of(~100 m. tall *Sequoia sempervirens*; *Ambrose et al. 2009, 2010*).
-Isolating height (>35m) under constant light conditions show that, canopy $gs$ decreases along with increasing $VPD$  [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Morphologically, leaf size [Kaare H. Jensen and Maciej A. Zwieniecki, 2013] and lobation [@kusiPlasticLeafMorphology2020] have shown to decrease, while leaf mass per area (at greater than 20m) to increase  [@cobleLightAcclimationOptimizes2015; @kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a; @chinLeafAcclimationLight2017]. 
+Isolating height (>35m) under constant light show that, canopy $gs$ decreases with increasing $VPD$  [@schaferEffectTreeHeight2000; @ambroseEffectsHeightTreetop2010]. Morphologically, leaf size [Kaare H. Jensen and Maciej A. Zwieniecki, 2013] and lobation [@kusiPlasticLeafMorphology2020] have shown to decrease, while leaf mass per area (at greater than 20m) to increase  [@cobleLightAcclimationOptimizes2015; @kenzoHeightrelatedChangesLeaf2015; @rijkersEffectTreeHeight2000a; @chinLeafAcclimationLight2017]. 
 
 However, disentangling tree-height related biological and biophysical drivers (Fig. `r fig_NEON_vertical`) on leaf traits remains an important area for research, which is sparse, but is beyond the scope of the current review. Here, our primary interest is in how leaf traits and function vary across the vertical gradient from the canopy-top to the understory in forests. We note that patterns across light and height gradients are generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
 
@@ -239,7 +239,7 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 ### Intraspecific variation
 
-Within-canopy gradient of individuals, leaf traits vary--going from buffered [shaded] to exposed canopy positions [@casasSunShadeLeaves2011]-- and therefore exhibit patterns in leaf anatomical, structural and biochemical traits [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. These trait-patterns contribute to [understanding] $T_{leaf}$ dynamics across the gradient [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] where Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity. The characterization of trait relationships and responses through the whole vertical canopy is becoming a strong research need because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
+Within-canopy gradients of individuals, leaf traits vary--going from buffered [shaded] to exposed canopy positions [@casasSunShadeLeaves2011]-- and therefore exhibit patterns in leaf anatomical, structural and biochemical traits [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. These trait-patterns contribute to [understanding] vertical $T_{leaf}$ dynamics [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] where Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity. The characterization of trait relationships and responses through the whole vertical canopy is becoming a strong research need because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
 
 ![Table `r table_leaf_traits`. (*For latest version of table, see tables.pdf.*)](table1.png)
 
@@ -254,7 +254,7 @@ nocite: |
 
 #### Morphological traits
 
-Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with adaptive strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance.On the other hand, shaded leaves invest more in light capture than in heat dissipation, therefore have lower convective cooling [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous light conditions, sun-leaves in different canopy orientations are shaped more based on $T_{air_{max}}$ and $VPD$ stress [@mediavillaFoliarPlasticityRelated2019a]. 
+Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with adaptive strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance.On the other hand, shaded leaves invest more in light capture than in heat dissipation, therefore have lower convective cooling [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous light conditions, sun-leaves in different canopy orientations are shaped based on $T_{air_{max}}$ and $VPD$ stress [@mediavillaFoliarPlasticityRelated2019a]. 
 
 #### Biochemical and physiological traits
 
@@ -269,7 +269,7 @@ Across forest species widely, show fundamental trait adaptation to light gradien
 
 ##### *Leaf lifespan*  
 
-New-leaf growth across the vertical gradient towards light constantly shades leaves underneath. Therefore, exposed-canopies have greater proportion of young leaves than shaded regions that have older leaves. Acclimation to shade from sun-exposure, and vice-versa, is more possible in younger leaves that are devoloping traits than in mature leaves where traits have been developed. In such cases, change in light can result in dropping of leaves [Niinemetes, 2007]. *Leaf turnover tends to be greater in the sun (in the tropics), so of your standing stock of leaves (at least in evergreen species) sun leaves should be younger than shade leaves. This is bound to affect metabolism, and may affect other aspects of their performance.*
+New-leaf growth along the light gradient constantly shades leaves underneath. Therefore, exposed-canopies have greater proportion of young leaves than shaded regions that have older leaves. Acclimation to shade from sun-exposure, and vice-versa, is more possible in younger leaves that are devoloping traits than in mature leaves where traits have been developed. In such cases, change in light can result in dropping of leaves [Niinemetes, 2007]. *Leaf turnover tends to be greater in the sun (in the tropics), so of your standing stock of leaves (at least in evergreen species) sun leaves should be younger than shade leaves. This is bound to affect metabolism, and may affect other aspects of their performance.*
 
 
 ##### *Deciduousness*
@@ -292,9 +292,9 @@ nocite: |
 ---
 
 
-### Stomatal conductance [$gs]
+### Stomatal conductance
 
-While $Gs$ mediates crucial leaf-atmosphere interaction across species, their exposed-sun-leaves, though equipped to thermoregulate efficiently are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]. Max transpiration rate and $gs$ is peaks in exposed-canopies during the day [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010] and declines through midday and afternoon due to stomtal closure [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b]. 
+While $gs$ mediates crucial leaf-atmosphere interaction across species, exposed-sun-leaves, though equipped to thermoregulate efficiently are largely constrained by $gs$ than shade-leaves [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020]. Max transpiration rate and $gs$ peaks in exposed-canopies during the day [@kosugiSeasonalFluctuationsTemperature2006; @sanchesDifferentialLeafTraits2010] and declines through midday and afternoon due to stomtal closure [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b]. 
 
 ### Photosynthesis
 
@@ -317,7 +317,7 @@ $T_{crit}$ is the temperature at which efficiency of photosystem II starts to de
 
 **Thermal tolerance (e.g., $T_{50}$) sparsely varies with exposure among recent studies, but there are no studies isolating effect of height.**
 
-150 years ago,  Sachs studied garden species $T_{50}$. Though, with little information on shade-leaves [*REF*]. In 1994, Knapp et al. showed that in tall grass prarie gallery forest in Kansas, photosynthetic heat tolerance measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species photosynthetic heat tolerance increased seasonally from June to August. However, more recetly @slotPhotosyntheticHeatTolerance2019a found that though $T_{50}$ was slightly lower for shade than sun-exposed leaves for two of three species in Panama tropical forest, the results weren't significant, with both measured near ground level. 
+150 years ago,  Sachs studied garden species $T_{50}$, though, with little information on shade-leaves [*REF*]. In 1994, Knapp et al. showed that in tall grass prarie gallery forest in Kansas, photosynthetic heat tolerance measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species photosynthetic heat tolerance increased seasonally from June to August. However, more recetly @slotPhotosyntheticHeatTolerance2019a found that though $T_{50}$ was slightly lower for shade than sun-exposed leaves for two of three species in Panama tropical forest, the results weren't significant, with both measured near ground level. 
 
 $T_{50}$ in *Acacia Papyrocarpa* (Benth.) trees in an arid region was observed to reflect microclimatic stress index along a vertical gradient where lower north-facing canopy showed higher composite climate stress and greater $T_{50}$ than other canopy positions, that correlated with low wind-speed greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019]. 
 
@@ -328,7 +328,7 @@ We're not aware of any other studies on this."we may want to argue that we have 
 
 Recent studies show that while leaf thermal tolerances across species reflects local microenvironmental conditions than regional macroclimate, [@feeley_thermal_2020; Slot et al. 2020; Perez and Feely 2020a] $T_{50}$ does not vary with phylogeny [Slot et al. 2020; Perez and Feeley 2020a]. 
 
-Global $T_{50}$s across latitude and climate range from ~45-50$^\circ$C (O' sullivan et al. 2017). Additionally, $T_{50}$ and $T_{crit}$, decrease with elevation in tropical forests and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017], vary with species [@krauseHightemperatureToleranceTropical2010a] and leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012; @slotLeafHeatTolerance2020]. $T_{crit}$ is also recently found to be greater in species with large leaves, and slow heating and cooling time [higher thermal time constant] and $T_{50}$ is found to be greater among species' leaves with greater construction costs--greater LMA--compared to species with low LMA [@slotLeafHeatTolerance2020]. @perezPhotosyntheticHeatTolerances2020 also found that, across species sun leaves that showed higher photosynthetic heat tolerance experienced higher $T_{leaf_{max}}$, and showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had a narrower breadth of thermal safety margins ($T_{leaf_{max}}$-$T_{50}$). 
+Global $T_{50}$s across latitude and climate range from ~45-50$^\circ$C (O' sullivan et al. 2017). $T_{50}$ and $T_{crit}$, decrease with elevation in tropical forests and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017], vary with species [@krauseHightemperatureToleranceTropical2010a] and leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012; @slotLeafHeatTolerance2020]. $T_{crit}$ is also recently found to be greater in species with large leaves, and slow heating and cooling time [higher thermal time constant] whereas $T_{50}$ is found to be greater among species' leaves with greater construction costs--greater LMA--compared to species with low LMA [@slotLeafHeatTolerance2020]. @perezPhotosyntheticHeatTolerances2020 also found that, across species sun leaves that showed higher photosynthetic heat tolerance experienced higher $T_{leaf_{max}}$, and showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had a narrower breadth of thermal safety margins ($T_{leaf_{max}}$-$T_{50}$). 
 
 
 ### Respiration
