--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -110,9 +110,7 @@ In the meantime, our findings imply that while large canopy trees are the most v
 
 **Forest responses and feedbacks to climate change will have a critical influence on the future of Earth's climate.**
 Globally, temperatures have risen # $^\circ$C since YEAR and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC 2021), accompanied by increasing severity and frequency of heat waves [@perkinsIncreasingFrequencyIntensity2012] and hotter droughts [*Trenberth et al. 2014*].
-These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities 2021], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities].
-Individually or in combination, these changes have the potential to reduce forest C sequestration, as may already be occurring in some forests [REFS; @sullivanLongtermThermalSensitivity2020]. 
-The resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016, Bonan 2008], yet this influence remains extremely uncertain [REFS].
+These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities 2021], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities]. Leading to, individually or in combination, can reduce forest C sequestration, as may already be occurring in some forests [REFS; @sullivanLongtermThermalSensitivity2020].The resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016, Bonan 2008], yet this influence remains extremely uncertain [REFS].
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. 
@@ -145,7 +143,7 @@ Here, we define the biophysical environment to include the physical structure of
 In this section, we supplement a review of the existing literature with a new analysis of data on vegetation structure and vertical microclimate profiles from the U.S. National Ecological Observatory Network [NEON; Appendix `r appendix_NEON_methods`, Schimel et al. 2007].
 
 ### Foliage density
-**Canopy foliage, acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions and is critical in influencing-and is largely influenced by-the vertical biophysical gradient.(Fig. `r fig_NEON_vertical`).**The distribution of this foliage is structured in correspondence with the size, and varies across tree structures and forests.  
+**Canopy foliage, acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions and is critical in influencing--and is influenced by--the vertical biophysical gradient.(Fig. `r fig_NEON_vertical`).**The distribution of this foliage is structured in correspondence with the size, and varies across tree structures and forests.  
 Leaf area density.... *description of most common vertical pattern (@bonan_ecological_2016 reviews this and points to appropriate references)*
 Vertical profiles in leaf area density vary across forests, being... *summarize some key differences across forest types* (REFS), and are altered (*HOW?*) following disturbance [e.g., @parkerCanopyLightTransmittance2002 ; @almeidaContrastingFireDamage2016 ; @starkReframingTropicalSavannization2020].
 They also vary seasonally, ... (Parker & Tibbs 2004; @smithSeasonalDroughtrelatedChanges2019 ; @parkerConsequencesEnvironmentalHeterogeneity2019). 
@@ -158,7 +156,7 @@ In this review, we focus primarily on growing season conditions, including leaf 
 ### Light environments
 
 **Light conditions, specifically changes in the proportion of incident light and photosynthetically active radiation (PAR), vary along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`; @koike_leaf_2001].** 
-Generally, along the vertical gradient of forests globally, amount of light decreases from canopy tops to the forest floor which is mediated by foliage LAI and density. This gradient is most pronounced under mixed and broad-leaf forests where light reaching forest floors, incident to the canopy-top range from ~1-2% to 4-5%, respectively [Fig. `r fig_NEON_vertical`; @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006] compared to needle-leaf forest floors that receive ~17-34% [@baldocchiSeasonalVariationEnergy1997]. Sunflecks, caused by small canopy gaps and wind-induced canopy movements are an important light-source for shaded forest regions that rely on sunflecks for photosynthesis [@waySunflecksTreesForests2012]. In heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995). 
+Generally, along the vertical gradient of forests globally, amount of light decreases from canopy tops to the forest floor which is mediated by foliage LAI and density. This gradient is most pronounced under broad-leaf and mixed forests where light reaching forest floors, incident to the canopy-top range from ~1-2% to 4-5%, respectively [Fig. `r fig_NEON_vertical`; @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006] compared to needle-leaf forest floors that receive ~17-34% [@baldocchiSeasonalVariationEnergy1997]. Sunflecks, are another axis of light for shaded forest regions, that is caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. In heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995). 
 
 ### Wind speeds 
 **Wind speeds are also higher at the top of the canopy (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`), owing to... [@juckerCanopyStructureTopography2018].**
@@ -168,9 +166,9 @@ Across all **#** forested NEON sites, and in closed-canopy forests [@barnardSeas
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering is greater under dense-canopy than open-canopy forests; with daytime cooler lower maximum  temperature, and nighttime warmer higher minimum in the understory, more than open-forests, nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests maintain higher daytime maximum temperature in the understory closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999; @ramboCanopyMicroclimateResponse2009] and  sometimes warmer nighttime understory temperatures than above canopy, due to long wave infrared radiation from the soil [@vonarxSpatiotemporalEffectsForest2012a].
+The strength of this buffering is greater under dense-canopy than open-canopy forests; with daytime cooler lower maximum  temperature, and nighttime warmer higher minimum in the understory, relatively more than open-forests, nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009;  @martin_boundary_1999] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. Nighttime temperatures in pine forest understory, sometimes can be warmer than above canopy, due to long wave infrared radiation from the soil [@vonarxSpatiotemporalEffectsForest2012a].
 
-Seasonally, buffering capacity increases with water availablity [@davisMicroclimaticBufferingForests2019] and is greater in wet than dry season [@rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018, Tymen et al. 2017; @mcgregor_tree_nodate]. However, under colder conditions, dense-canopies maintain warmer higher minimum temperatures [$T_{min}$] in the understory relative to open-canopy forests and nearby clearings where greater radiative heat loss in results in lower $T_{min}$ [@zellweger_seasonal_2019; *Defrenne et al. 2021*; @nakamuraForestsTheirCanopies2017; @mcgregor_tree_nodate].
+Seasonally, buffering capacity increases with water availablity [@davisMicroclimaticBufferingForests2019] and is greater in wet than dry season [@rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018, Tymen et al. 2017; @mcgregor_tree_nodate]. In colder conditions, dense-canopies maintain warmer higher minimum temperatures [$T_{min}$] in the understory relative to open-canopy forests and nearby clearings where greater radiative heat loss results in lower $T_{min}$ [@zellweger_seasonal_2019; *Defrenne et al. 2021*; @nakamuraForestsTheirCanopies2017; @mcgregor_tree_nodate].
 
 Tree height also plays a role in buffering where trees upto 20m with higher LAI can maintain lower mean and max temperature and vapor pressure deficit ($VPD$) in the understory. However, beyond a certain tree height, temperature and $VPD$ offset can plateau [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018].
 
@@ -392,20 +390,19 @@ Having established how physical conditions and biological form and function vary
 
 
 ## Global change responses
- 
+
+The complex interactions of the biophysical environment and biological--leaf traits, metabolic processes and distribution of trees--are highly interconneced, resulting in feedbacks to another. Therefore, climate-driven changes, such as rising temperature, can have implications to forests on several levels.  
+
 ### canopy disturbance
 
 
-The complex interactions of the biophysical environment and biological--leaf traits, metabolic processes and distribution of trees--are largely interconneced, resulting in feedbacks to another. Therefore, climate-driven changes, such as rising temperature, can have implications to forests at several scales. 
+Canopy buffering is crucial to microclimate functioning, which is influenced by hydrological-cycle at large [Davis et al. 2019]. Therefore, frequent droughts causes canopy disturbance, where less severe drought can decrease tree canopy circumference [@aussenacInteractionsForestStands2000a], and more severe droughts shows increasing larger tree mortality in forests globally [@senfCanopyMortalityHas2018a; @mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Hydraulic limitation in forests can also alters species thermoregulation [@sastry_leaf_2018]. Increasing temperatures shows increase in canopy $T_{leaf}$ above ambient temperature, and sometimes beyond or close to their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019].  Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Recent adavances in canopy studies further shows large loss of canopies in Europe caused by wind-induced disturbance and anthropogenic deforestation [Cornelius Senf, 2021; @senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020]. Loss of big trees (e.g.@senfCanopyMortalityHas2018a ) would increase canopy roughness, and reductions in canopy cover is associated with reduced canopy structural complexity and composition which changes understory species composition and soil fertility [*@majasalmiImpactTreeCanopy2020*].Leading to altered biophysical gradient with local heating effects, [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
 
-Canopy buffering capacity which is influenced by hydrological-cycle at large is crucial to microclimates [Davis et al. 2019], where disturbance to canopy structural composition and $LAI$ influences understory species composition, soil fertility [*@majasalmiImpactTreeCanopy2020*] and species in microclimate conditions, particularly threatening flora [REF] fauna adapted to microrefugias [REF]. Such disturbances to canopies are observed, in part, by frequent droughts, where less severe drought can decrease tree canopy circumference [@aussenacInteractionsForestStands2000a], and more severe droughts can contribute to increasing larger tree mortality in forests around the world [@senfCanopyMortalityHas2018a; @mcdowellMechanismsPlantSurvival2008; Brienen et al. 2015; @bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a]. Hydraulic limitation in forests can also alters species thermoregulation [@sastry_leaf_2018]. Increasing temperatures can increase canopy $T_{leaf}$ sometimes above ambient temperature, leading to temperate and tropical forest canopies functioning beyond or close to their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019].  Temperature driven photosynthesis limitation is also reducing tree growth rates, accompanying a global trend towards more frequently disturbed forests dominated by younger trees [@mcdowellPervasiveShiftsForest2020]. Recent adavances in canopy studies point toward large loss of canopies in Europe caused by wind-induced disturbance and anthropogenic deforestation [Cornelius Senf, 2021; @senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020]. Loss of big trees (e.g.@senfCanopyMortalityHas2018a ) would increase canopy roughness, and reductions in canopy cover also associated with reduced canopy structural complexity, can lead to altered biophysical gradient and microclimates with local heating effects [@zellweger_forest_2020; @starkReframingTropicalSavannization2020], non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions [@starkReframingTropicalSavannization2020]. Each of these changes have potential feedbacks to climate change.
-
- 
 ### warming
 
-While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020] leading to understory plant communities already undergoing thermophilization [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013] with increasing threat to microclimatic fauna [@scheffersMicrohabitatsReduceAnimal2013] . Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. Whereas warming in other cases is associated with taller understory trees with lower LMA that complete their lifecycle in the understory, under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]. Warming and heat waves can also drastically alter canopy and understory phenology, forest photosynthesis and forest C uptake [REFS, @zohnerOngoingSeasonallyUneven2019].
+While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020; @maesPlantFunctionalTrait2020]. Warming will disproportionately affect the less warm-adapted functional types within the forest canopy, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), as is observed with understory plant thermophilization (death is faster than recruitment and growth) [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013] with increasing threat to fauna in microrefugias [@scheffersMicrohabitatsReduceAnimal2013] . Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. Whereas, in other cases warming is associated with taller understory trees with lower LMA that complete their lifecycle in the understory, under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]. Heatwave and temperature  can alter canopy and understory phenology, forest photosynthesis and forest C uptake [REFS, @zohnerOngoingSeasonallyUneven2019].
 
-warming will disproportionately affect the less warm-adapted functional types within the forest canopy, essentially creating holes in the canopy that will take a long time to refill (especially in slow-growing tropical sub-canopy specialists), as is observed with Andean thermophilization (death is faster than recruitment and growth). Differential mortality within the canopy structure will alter the profile of metabolism and hence emergent forest function. Such alteration to canopy structure may be detectable by lidar and thermal remote sensing. If we know how metabolism maps to the thermal profile, then the observed forest structural changes can inform prediction of forest function.
+Differential mortality within the canopy structure will alter the profile of metabolism and hence emergent forest function. Such alteration to canopy structure may be detectable by lidar and thermal remote sensing. If we know how metabolism maps to the thermal profile, then the observed forest structural changes can inform prediction of forest function.
  
 ## Scaling across space and time 
 
