--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -166,15 +166,13 @@ Across all **#** forested NEON sites, and in closed-canopy forests [@barnardSeas
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering is greater under dense-canopy than open-canopy forests; with daytime cooler lower maximum  temperature, and nighttime warmer higher minimum in the understory, relatively more than open-forests, nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009;  @martin_boundary_1999] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. Nighttime temperatures in pine forest understory, sometimes can be warmer than above canopy, due to long wave infrared radiation from the soil [@vonarxSpatiotemporalEffectsForest2012a].
+The strength of this buffering is greater under dense-canopy than open-canopy forests; with daytime cooler lower maximum  temperature, and nighttime warmer higher minimum in the understory, relatively more than open-forests, nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009;  @martin_boundary_1999] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. Nighttime temperatures in pine forest understory, sometimes can be warmer than above canopy, due to long wave infrared radiation from the soil [@vonarxSpatiotemporalEffectsForest2012a]. 
 
 Seasonally, buffering capacity increases with water availablity [@davisMicroclimaticBufferingForests2019] and is greater in wet than dry season [@rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018, Tymen et al. 2017; @mcgregor_tree_nodate]. In colder conditions, dense-canopies maintain warmer higher minimum temperatures [$T_{min}$] in the understory relative to open-canopy forests and nearby clearings where greater radiative heat loss results in lower $T_{min}$ [@zellweger_seasonal_2019; *Defrenne et al. 2021*; @nakamuraForestsTheirCanopies2017; @mcgregor_tree_nodate].
 
-Tree height also plays a role in buffering where trees upto 20m with higher LAI can maintain lower mean and max temperature and vapor pressure deficit ($VPD$) in the understory. However, beyond a certain tree height, temperature and $VPD$ offset can plateau [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018].
-
 ### Humidity and evaporative demand
 **Humidity also varies across the forest vertical profile, and is generally higher in the understory (Fig. `r fig_NEON_vertical`).**[@mcgregor_tree_nodate]
-Along with temperature, dense-canopy forests maintain higher daily maximum relative humidity ($RH$) below-canopy than open-forests and nearby open areas, which is greater in wetter conditions, in warmer than colder months [@vonarxSpatiotemporalEffectsForest2012a]. RH, in combination with temperature, determines $VPD$, an important metric expressing the driving force of water loss from a leaf; tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. 
+Along with temperature, dense-canopy forests maintain higher daily maximum relative humidity ($RH$) below-canopy than open-forests and nearby open areas, which is greater in wetter conditions, in warmer than colder months [@vonarxSpatiotemporalEffectsForest2012a]. RH, in combination with temperature, determines vapor pressure deficit [$VPD$], an important metric expressing the driving force of water loss from a leaf; tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Increased tree height [upto 20m with higher LAI] has also shown to lower mean and max temperature and $VPD$ in the understory. Beyond a certain tree-height, the offset can plateau [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018].
 
 ### Carbon dioxide
 
