--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -156,7 +156,7 @@ In this review, we focus primarily on growing season conditions, including leaf 
 ### Light environments
 
 **Light conditions, specifically changes in the proportion of incident light and photosynthetically active radiation (PAR), vary along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`; @koike_leaf_2001].** 
-Generally, along the vertical gradient of forests globally, amount of light decreases from canopy tops to the forest floor which is mediated by foliage LAI and density. This gradient is most pronounced under broad-leaf and mixed forests where light reaching forest floors, incident to the canopy-top range from ~1-2% to 4-5%, respectively [Fig. `r fig_NEON_vertical`; @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006] compared to needle-leaf forest floors that receive ~17-34% [@baldocchiSeasonalVariationEnergy1997]. Sunflecks, are another axis of light for shaded forest regions, that is caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. In heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995). 
+Generally, along the vertical gradient of forests globally, amount of light decreases from canopy tops to the forest floor which is mediated by foliage LAI and density. This gradient is most pronounced under broad-leaf and mixed forests where light reaching forest floors, incident to the canopy-top range from ~1-2% to 4-5%, respectively [Fig. `r fig_NEON_vertical`; @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006] compared to needle-leaf forest floors that receive ~17-34% [@baldocchiSeasonalVariationEnergy1997]. Sunflecks, are another axis of light for shaded forest regions, caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. In heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy to the inner canopy is a better proxy for light environment than height (Parker 1995). 
 
 ### Wind speeds 
 **Wind speeds are also higher at the top of the canopy (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`), owing to... [@juckerCanopyStructureTopography2018].**
@@ -166,17 +166,17 @@ Across all **#** forested NEON sites, and in closed-canopy forests [@barnardSeas
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering is greater under dense-canopy than open-canopy forests; with daytime cooler lower maximum  temperature, and nighttime warmer higher minimum in the understory, relatively more than open-forests, nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009;  @martin_boundary_1999] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. Nighttime temperatures in pine forest understory, sometimes can be warmer than above canopy, due to long wave infrared radiation from the soil [@vonarxSpatiotemporalEffectsForest2012a]. 
+The strength of this buffering is greater under dense-canopy than open-canopy forests; with daytime cooler lower maximum  temperature, and nighttime warmer higher minimum in the understory, relatively more than open-forests, nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009;  @martin_boundary_1999] and neighboring tree crop agricultural plantations [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. 
 
-Seasonally, buffering capacity increases with water availablity [@davisMicroclimaticBufferingForests2019] and is greater in wet than dry season [@rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018, Tymen et al. 2017; @mcgregor_tree_nodate]. In colder conditions, dense-canopies maintain warmer higher minimum temperatures [$T_{min}$] in the understory relative to open-canopy forests and nearby clearings where greater radiative heat loss results in lower $T_{min}$ [@zellweger_seasonal_2019; *Defrenne et al. 2021*; @nakamuraForestsTheirCanopies2017; @mcgregor_tree_nodate].
+Seasonally, buffering capacity increases with water availablity [@davisMicroclimaticBufferingForests2019] and is greater in wet than dry seasons [@rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018, Tymen et al. 2017; @mcgregor_tree_nodate]. In colder conditions, dense-canopies maintain warmer higher minimum temperatures [$T_{min}$] in the understory relative to open-canopy forests and nearby clearings where greater radiative heat loss results in lower $T_{min}$ [@zellweger_seasonal_2019; *Defrenne et al. 2021*; @nakamuraForestsTheirCanopies2017; @mcgregor_tree_nodate].
 
 ### Humidity and evaporative demand
 **Humidity also varies across the forest vertical profile, and is generally higher in the understory (Fig. `r fig_NEON_vertical`).**[@mcgregor_tree_nodate]
-Along with temperature, dense-canopy forests maintain higher daily maximum relative humidity ($RH$) below-canopy than open-forests and nearby open areas, which is greater in wetter conditions, in warmer than colder months [@vonarxSpatiotemporalEffectsForest2012a]. RH, in combination with temperature, determines vapor pressure deficit [$VPD$], an important metric expressing the driving force of water loss from a leaf; tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Increased tree height [upto 20m with higher LAI] has also shown to lower mean and max temperature and $VPD$ in the understory. Beyond a certain tree-height, the offset can plateau [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018].
+Along with temperature, dense-canopy forests maintain higher daily maximum relative humidity ($RH$) below-canopy than open-forests and nearby open areas, which is greater in wetter conditions, in warmer than colder months [@vonarxSpatiotemporalEffectsForest2012a]. RH, in combination with temperature, determines vapor pressure deficit [$VPD$], an important metric expressing the driving force of water loss from a leaf; tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Increased tree height [upto 20m with higher LAI] can to lower mean and max temperature and $VPD$ in the understory. Beyond a certain tree-height, the offset can plateau [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018].
 
 ### Carbon dioxide
 
-**Atmopsheric carbon dioxide (CO~2~) concentrations tend to be higher near ground level at night, but largely dissipate during the day [@koike_leaf_2001; @yang_spatial_1999].** 
+**Atmospheric carbon dioxide (CO~2~) concentrations tend to be higher near ground level at night, but largely dissipate during the day [@koike_leaf_2001; @yang_spatial_1999].** 
 Given that differences are small during the day when photosynthesis is occurring, and that even nighttime differences are modest at the height of understory tree crowns, CO~2~ concentrations are unlikely to have much of an effect on the energy balance and metabolism of leaves across the forest vertical gradient.
 
 ### Geographic and climatic factors
@@ -235,7 +235,7 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 
 ### Intraspecific variation
 
-Within-canopy gradients of individuals, leaf traits vary--going from buffered [shaded] to exposed canopy positions [@casasSunShadeLeaves2011]-- and therefore exhibit patterns in leaf anatomical, structural and biochemical traits [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. These trait-patterns contribute to [understanding] vertical $T_{leaf}$ dynamics [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] where Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity. The characterization of trait relationships and responses through the whole vertical canopy is becoming a strong research need because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
+Within-canopy gradients of individuals, leaf traits vary--going from buffered [shaded] to exposed canopy positions [@casasSunShadeLeaves2011]-- and therefore exhibit patterns in leaf anatomical, structural and biochemical traits [@sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020]. These trait-patterns contribute to [understanding] vertical $T_{leaf}$ dynamics [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016] where Table `r table_leaf_traits` summarizes relevant traits for thermal sensitivity. The characterization of trait relationships and responses through the vertical canopy is a strong research need because LES theory was developed using mainly sun exposed (upper canopy) leaves [@chenLeafEconomicsSpectrum2020; @keenanGlobalLeafTrait2016]. 
 
 ![Table `r table_leaf_traits`. (*For latest version of table, see tables.pdf.*)](table1.png)
 
@@ -250,7 +250,7 @@ nocite: |
 
 #### Morphological traits
 
-Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with adaptive strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance.On the other hand, shaded leaves invest more in light capture than in heat dissipation, therefore have lower convective cooling [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous light conditions, sun-leaves in different canopy orientations are shaped based on $T_{air_{max}}$ and $VPD$ stress [@mediavillaFoliarPlasticityRelated2019a]. 
+Exposed-canopy leaves are better adapted to heat and water stress than shaded-leaves where sun-leaves are often thicker, smaller, hairier, with greater leaf dissections [@leighInfluenceLeafSize2017; @vogelConvectiveCoolingLow1970; @sackHowStrongIntracanopy2006], hydraulically efficient [Brodribb et al. 2010], with adaptive strategies such as leaf-angle and rolling [@niinemetsAdjustmentFoliageStructure1998]. All, collectively regulate $T_{leaf}$-photosynthetic balance.On the other hand, shaded leaves invest more in light capture than in heat dissipation, with lower convective cooling [@fauset_differencsunes_2018; @leighInfluenceLeafSize2017; Wright et al. 2019]. Under homogeneous light conditions, sun-leaves in different canopy orientations are shaped based on $T_{air_{max}}$ and $VPD$ stress [@mediavillaFoliarPlasticityRelated2019a]. 
 
 #### Biochemical and physiological traits
 
